# songteacher

./: .gitignore  Makefile
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: job_store.py
backend/app/models/: schemas.py
backend/app/routers/: jobs.py  theory.py
backend/app/services/: analyzer.py  audio_extractor.py  guitar_tab.py  pipeline.py  stem_separator.py  transcriber.py
backend/tests/: test_api.py  test_guitar_tab.py  test_job_store.py  test_schemas.py  test_theory.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActiveChord.tsx  ChordTimeline.tsx  GuitarFretboard.tsx  GuitarTab.tsx  LoadingProgress.tsx  NowPlaying.tsx  PianoRoll.tsx  PlaybackControls.tsx  QuickReference.tsx  SongChords.tsx  SongInfo.tsx  StemSelector.tsx  TheoryDrilldown.tsx  TheoryPanel.tsx  TheoryReference.tsx  UrlInput.tsx
frontend/src/hooks/: useAnalysisJob.ts  usePlayback.ts
frontend/src/lib/: pianoRollRenderer.ts  playbackEngine.ts
frontend/src/types/: index.ts
