[project]
name = "songteacher-backend"
version = "0.1.0"
description = "YouTube to Music Theory analysis backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "yt-dlp>=2024.0",
    "basic-pitch>=0.3.0",
    "music21>=9.0",
    "numpy>=1.26,<2",
    "pretty-midi>=0.2.10",
    "llvmlite==0.43.0",
    "numba==0.60.0",
    "onnxruntime>=1.17.0,<1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
